// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChatIntegrationPreview/> render() should display auto responder 1`] = `
<div
  className="preview"
  style={Object {}}
>
  <div
    className="dialog"
  >
    <div
      className="header"
      style={
        Object {
          "backgroundColor": "#123456",
        }
      }
    >
      <ChatIntegrationAvatar
        isOnline={true}
        mainColor="#123456"
        offlineColor="#EBEBEB"
        shouldHideAvatarOnlineMarker={false}
      />
      <div
        className="details"
        style={
          Object {
            "color": "#FFFFFF",
          }
        }
      >
        <div
          className="appName"
        >
          My little chat integration
        </div>
        <div
          className="introductionText"
        >
          intro
        </div>
      </div>
    </div>
    <OptionalEmailCapture
      autoResponderReply="reply-shortly"
      conversationColor="#456789"
      language="en-US"
      name="My little chat integration"
    />
    <PoweredByGorgias
      translatedTexts={
        Object {
          "actionPostbackError": "An error occurred while processing your action. Please try again.",
          "backLabelBackAt": "Back online at {time}",
          "backLabelBackInAMinute": "Back in 1 minute",
          "backLabelBackInAnHour": "Back in 1 hour",
          "backLabelBackInDays": "Back in {value} days",
          "backLabelBackInHours": "Back in {value} hours",
          "backLabelBackInMinutes": "Back in {value} minutes",
          "backLabelBackTomorrow": "Back tomorrow",
          "campaignClickToReply": "Click to reply",
          "clickToRetry": "Message not delivered. Click to retry.",
          "conversationTimestampHeaderFormat": "MMMM D",
          "emailCaptureInputLabel": "Get notified by email",
          "emailCaptureOfflineThanksText": "Thanks {email}! We'll get back to you shortly.",
          "emailCaptureOfflineTriggerText": "We're away, leave us your email and we'll respond shortly.",
          "emailCaptureOnlineThanksText": "Thanks! We'll email you at {email} if you leave.",
          "emailCaptureOnlineTriggerText": "Leave us your email and we will reply soon.",
          "emailCapturePlaceholder": "your@email.com",
          "emailCaptureRequiredEmailPlaceholder": "Leave your email",
          "emailCaptureRequiredMessagePlaceholder": "Write your message",
          "fetchHistory": "Load more",
          "fetchingHistory": "Retrieving history...",
          "headerText": "Gorgias Team",
          "inputPlaceholder": "Type a message...",
          "introductionText": "How can we help?",
          "invalidFileError": "Only images are supported. Choose a file with a supported extension (jpg, jpeg, png, gif, or bmp).",
          "messageDelivered": "Delivered",
          "messageError": "An error occurred while sending your message. Please try again.",
          "messageIndicatorTitlePlural": "({count}) New messages",
          "messageIndicatorTitleSingular": "({count}) New message",
          "messageRelativeTimeDay": "{value}d ago",
          "messageRelativeTimeHour": "{value}h ago",
          "messageRelativeTimeJustNow": "Just now",
          "messageRelativeTimeMinute": "{value}m ago",
          "messageSending": "Sending...",
          "messageTimestampFormat": "h:mm A",
          "offlineIntroductionText": "We'll be back tomorrow",
          "poweredBy": "Powered by",
          "poweredByGorgias": "Powered by Gorgias",
          "requiredEmailCaptureWelcomeMessage": "Hi, hope you're doing well! Leave us your email so we can get back to you.",
          "send": "Send",
          "tapToRetry": "Message not delivered. Tap to retry.",
          "unsupportedActionType": "Unsupported action type.",
          "unsupportedMessageType": "Unsupported message type.",
          "usualReplyTimeDay": "Typically replies within a day",
          "usualReplyTimeHours": "Typically replies in a few hours",
          "usualReplyTimeMinutes": "Typically replies in a few minutes",
          "waitTimeMediumReply": "Thanks for reaching out! An agent will get back to you in about {waitTime} minutes.",
        }
      }
    />
  </div>
  <div
    className="button bottom-right"
    style={
      Object {
        "backgroundColor": "#123456",
      }
    }
  >
    <div
      className="iconWrapper"
    >
      <i
        className="icon"
      />
      <div
        className="shadow"
      />
    </div>
  </div>
</div>
`;

exports[`<ChatIntegrationPreview/> render() should display display the offsets when editing axis x 1`] = `
<div
  className="preview"
  style={
    Object {
      "paddingRight": 60,
      "width": 440,
    }
  }
>
  <div
    className="dialog"
  >
    <div
      className="header"
      style={
        Object {
          "backgroundColor": "#123456",
        }
      }
    >
      <ChatIntegrationAvatar
        isOnline={true}
        mainColor="#123456"
        offlineColor="#EBEBEB"
        shouldHideAvatarOnlineMarker={false}
      />
      <div
        className="details"
        style={
          Object {
            "color": "#FFFFFF",
          }
        }
      >
        <div
          className="appName"
        >
          My little chat integration
        </div>
        <div
          className="introductionText"
        >
          intro
        </div>
      </div>
    </div>
    <MessageContent
      agentMessages={
        Array [
          Object {
            "attachments": Array [],
            "content": "test",
            "isHtml": false,
          },
        ]
      }
      conversationColor="#456789"
      currentUser={
        Immutable.Map {
          "name": "Charles",
        }
      }
      customerInitialMessages={Array []}
    />
    <PoweredByGorgias
      translatedTexts={
        Object {
          "actionPostbackError": "An error occurred while processing your action. Please try again.",
          "backLabelBackAt": "Back online at {time}",
          "backLabelBackInAMinute": "Back in 1 minute",
          "backLabelBackInAnHour": "Back in 1 hour",
          "backLabelBackInDays": "Back in {value} days",
          "backLabelBackInHours": "Back in {value} hours",
          "backLabelBackInMinutes": "Back in {value} minutes",
          "backLabelBackTomorrow": "Back tomorrow",
          "campaignClickToReply": "Click to reply",
          "clickToRetry": "Message not delivered. Click to retry.",
          "conversationTimestampHeaderFormat": "MMMM D",
          "emailCaptureInputLabel": "Get notified by email",
          "emailCaptureOfflineThanksText": "Thanks {email}! We'll get back to you shortly.",
          "emailCaptureOfflineTriggerText": "We're away, leave us your email and we'll respond shortly.",
          "emailCaptureOnlineThanksText": "Thanks! We'll email you at {email} if you leave.",
          "emailCaptureOnlineTriggerText": "Leave us your email and we will reply soon.",
          "emailCapturePlaceholder": "your@email.com",
          "emailCaptureRequiredEmailPlaceholder": "Leave your email",
          "emailCaptureRequiredMessagePlaceholder": "Write your message",
          "fetchHistory": "Load more",
          "fetchingHistory": "Retrieving history...",
          "headerText": "Gorgias Team",
          "inputPlaceholder": "Type a message...",
          "introductionText": "How can we help?",
          "invalidFileError": "Only images are supported. Choose a file with a supported extension (jpg, jpeg, png, gif, or bmp).",
          "messageDelivered": "Delivered",
          "messageError": "An error occurred while sending your message. Please try again.",
          "messageIndicatorTitlePlural": "({count}) New messages",
          "messageIndicatorTitleSingular": "({count}) New message",
          "messageRelativeTimeDay": "{value}d ago",
          "messageRelativeTimeHour": "{value}h ago",
          "messageRelativeTimeJustNow": "Just now",
          "messageRelativeTimeMinute": "{value}m ago",
          "messageSending": "Sending...",
          "messageTimestampFormat": "h:mm A",
          "offlineIntroductionText": "We'll be back tomorrow",
          "poweredBy": "Powered by",
          "poweredByGorgias": "Powered by Gorgias",
          "requiredEmailCaptureWelcomeMessage": "Hi, hope you're doing well! Leave us your email so we can get back to you.",
          "send": "Send",
          "tapToRetry": "Message not delivered. Tap to retry.",
          "unsupportedActionType": "Unsupported action type.",
          "unsupportedMessageType": "Unsupported message type.",
          "usualReplyTimeDay": "Typically replies within a day",
          "usualReplyTimeHours": "Typically replies in a few hours",
          "usualReplyTimeMinutes": "Typically replies in a few minutes",
          "waitTimeMediumReply": "Thanks for reaching out! An agent will get back to you in about {waitTime} minutes.",
        }
      }
    />
  </div>
  <div
    className="button bottom-right"
    style={
      Object {
        "backgroundColor": "#123456",
      }
    }
  >
    <div
      className="iconWrapper"
    >
      <i
        className="icon"
      />
      <div
        className="shadow"
      />
    </div>
    <div
      className="axis-x"
      style={
        Object {
          "right": -60,
          "width": 60,
        }
      }
    >
      <div
        className="offsetLine"
      />
      <div
        className="offsetContent"
      >
        1000px
      </div>
    </div>
  </div>
</div>
`;

exports[`<ChatIntegrationPreview/> render() should display display the offsets when editing axis y 1`] = `
<div
  className="preview"
  style={Object {}}
>
  <div
    className="dialog"
  >
    <div
      className="header"
      style={
        Object {
          "backgroundColor": "#123456",
        }
      }
    >
      <ChatIntegrationAvatar
        isOnline={true}
        mainColor="#123456"
        offlineColor="#EBEBEB"
        shouldHideAvatarOnlineMarker={false}
      />
      <div
        className="details"
        style={
          Object {
            "color": "#FFFFFF",
          }
        }
      >
        <div
          className="appName"
        >
          My little chat integration
        </div>
        <div
          className="introductionText"
        >
          intro
        </div>
      </div>
    </div>
    <MessageContent
      agentMessages={
        Array [
          Object {
            "attachments": Array [],
            "content": "test",
            "isHtml": false,
          },
        ]
      }
      conversationColor="#456789"
      currentUser={
        Immutable.Map {
          "name": "Charles",
        }
      }
      customerInitialMessages={Array []}
    />
    <PoweredByGorgias
      translatedTexts={
        Object {
          "actionPostbackError": "An error occurred while processing your action. Please try again.",
          "backLabelBackAt": "Back online at {time}",
          "backLabelBackInAMinute": "Back in 1 minute",
          "backLabelBackInAnHour": "Back in 1 hour",
          "backLabelBackInDays": "Back in {value} days",
          "backLabelBackInHours": "Back in {value} hours",
          "backLabelBackInMinutes": "Back in {value} minutes",
          "backLabelBackTomorrow": "Back tomorrow",
          "campaignClickToReply": "Click to reply",
          "clickToRetry": "Message not delivered. Click to retry.",
          "conversationTimestampHeaderFormat": "MMMM D",
          "emailCaptureInputLabel": "Get notified by email",
          "emailCaptureOfflineThanksText": "Thanks {email}! We'll get back to you shortly.",
          "emailCaptureOfflineTriggerText": "We're away, leave us your email and we'll respond shortly.",
          "emailCaptureOnlineThanksText": "Thanks! We'll email you at {email} if you leave.",
          "emailCaptureOnlineTriggerText": "Leave us your email and we will reply soon.",
          "emailCapturePlaceholder": "your@email.com",
          "emailCaptureRequiredEmailPlaceholder": "Leave your email",
          "emailCaptureRequiredMessagePlaceholder": "Write your message",
          "fetchHistory": "Load more",
          "fetchingHistory": "Retrieving history...",
          "headerText": "Gorgias Team",
          "inputPlaceholder": "Type a message...",
          "introductionText": "How can we help?",
          "invalidFileError": "Only images are supported. Choose a file with a supported extension (jpg, jpeg, png, gif, or bmp).",
          "messageDelivered": "Delivered",
          "messageError": "An error occurred while sending your message. Please try again.",
          "messageIndicatorTitlePlural": "({count}) New messages",
          "messageIndicatorTitleSingular": "({count}) New message",
          "messageRelativeTimeDay": "{value}d ago",
          "messageRelativeTimeHour": "{value}h ago",
          "messageRelativeTimeJustNow": "Just now",
          "messageRelativeTimeMinute": "{value}m ago",
          "messageSending": "Sending...",
          "messageTimestampFormat": "h:mm A",
          "offlineIntroductionText": "We'll be back tomorrow",
          "poweredBy": "Powered by",
          "poweredByGorgias": "Powered by Gorgias",
          "requiredEmailCaptureWelcomeMessage": "Hi, hope you're doing well! Leave us your email so we can get back to you.",
          "send": "Send",
          "tapToRetry": "Message not delivered. Tap to retry.",
          "unsupportedActionType": "Unsupported action type.",
          "unsupportedMessageType": "Unsupported message type.",
          "usualReplyTimeDay": "Typically replies within a day",
          "usualReplyTimeHours": "Typically replies in a few hours",
          "usualReplyTimeMinutes": "Typically replies in a few minutes",
          "waitTimeMediumReply": "Thanks for reaching out! An agent will get back to you in about {waitTime} minutes.",
        }
      }
    />
  </div>
  <div
    className="button bottom-right"
    style={
      Object {
        "backgroundColor": "#123456",
      }
    }
  >
    <div
      className="iconWrapper"
    >
      <i
        className="icon"
      />
      <div
        className="shadow"
      />
    </div>
    <div
      className="axis-y"
    >
      <div
        className="offsetLine"
      />
      <div
        className="offsetContent"
      >
        0px
      </div>
    </div>
  </div>
</div>
`;

exports[`<ChatIntegrationPreview/> render() should display optional email capture 1`] = `
<div
  className="preview"
  style={Object {}}
>
  <div
    className="dialog"
  >
    <div
      className="header"
      style={
        Object {
          "backgroundColor": "#123456",
        }
      }
    >
      <ChatIntegrationAvatar
        isOnline={true}
        mainColor="#123456"
        offlineColor="#EBEBEB"
        shouldHideAvatarOnlineMarker={false}
      />
      <div
        className="details"
        style={
          Object {
            "color": "#FFFFFF",
          }
        }
      >
        <div
          className="appName"
        >
          My little chat integration
        </div>
        <div
          className="introductionText"
        >
          intro
        </div>
      </div>
    </div>
    <OptionalEmailCapture
      conversationColor="#456789"
      language="en-US"
      name="My little chat integration"
    />
    <PoweredByGorgias
      translatedTexts={
        Object {
          "actionPostbackError": "An error occurred while processing your action. Please try again.",
          "backLabelBackAt": "Back online at {time}",
          "backLabelBackInAMinute": "Back in 1 minute",
          "backLabelBackInAnHour": "Back in 1 hour",
          "backLabelBackInDays": "Back in {value} days",
          "backLabelBackInHours": "Back in {value} hours",
          "backLabelBackInMinutes": "Back in {value} minutes",
          "backLabelBackTomorrow": "Back tomorrow",
          "campaignClickToReply": "Click to reply",
          "clickToRetry": "Message not delivered. Click to retry.",
          "conversationTimestampHeaderFormat": "MMMM D",
          "emailCaptureInputLabel": "Get notified by email",
          "emailCaptureOfflineThanksText": "Thanks {email}! We'll get back to you shortly.",
          "emailCaptureOfflineTriggerText": "We're away, leave us your email and we'll respond shortly.",
          "emailCaptureOnlineThanksText": "Thanks! We'll email you at {email} if you leave.",
          "emailCaptureOnlineTriggerText": "Leave us your email and we will reply soon.",
          "emailCapturePlaceholder": "your@email.com",
          "emailCaptureRequiredEmailPlaceholder": "Leave your email",
          "emailCaptureRequiredMessagePlaceholder": "Write your message",
          "fetchHistory": "Load more",
          "fetchingHistory": "Retrieving history...",
          "headerText": "Gorgias Team",
          "inputPlaceholder": "Type a message...",
          "introductionText": "How can we help?",
          "invalidFileError": "Only images are supported. Choose a file with a supported extension (jpg, jpeg, png, gif, or bmp).",
          "messageDelivered": "Delivered",
          "messageError": "An error occurred while sending your message. Please try again.",
          "messageIndicatorTitlePlural": "({count}) New messages",
          "messageIndicatorTitleSingular": "({count}) New message",
          "messageRelativeTimeDay": "{value}d ago",
          "messageRelativeTimeHour": "{value}h ago",
          "messageRelativeTimeJustNow": "Just now",
          "messageRelativeTimeMinute": "{value}m ago",
          "messageSending": "Sending...",
          "messageTimestampFormat": "h:mm A",
          "offlineIntroductionText": "We'll be back tomorrow",
          "poweredBy": "Powered by",
          "poweredByGorgias": "Powered by Gorgias",
          "requiredEmailCaptureWelcomeMessage": "Hi, hope you're doing well! Leave us your email so we can get back to you.",
          "send": "Send",
          "tapToRetry": "Message not delivered. Tap to retry.",
          "unsupportedActionType": "Unsupported action type.",
          "unsupportedMessageType": "Unsupported message type.",
          "usualReplyTimeDay": "Typically replies within a day",
          "usualReplyTimeHours": "Typically replies in a few hours",
          "usualReplyTimeMinutes": "Typically replies in a few minutes",
          "waitTimeMediumReply": "Thanks for reaching out! An agent will get back to you in about {waitTime} minutes.",
        }
      }
    />
    <div
      className="footer"
    >
      <div
        className="placeholder"
      >
        Type a message...
      </div>
      <i
        className="icon camera"
      />
    </div>
  </div>
  <div
    className="button bottom-right"
    style={
      Object {
        "backgroundColor": "#123456",
      }
    }
  >
    <div
      className="iconWrapper"
    >
      <i
        className="icon"
      />
      <div
        className="shadow"
      />
    </div>
  </div>
</div>
`;

exports[`<ChatIntegrationPreview/> render() should display required email capture 1`] = `
<div
  className="preview"
  style={Object {}}
>
  <div
    className="dialog"
  >
    <div
      className="header"
      style={
        Object {
          "backgroundColor": "#123456",
        }
      }
    >
      <ChatIntegrationAvatar
        isOnline={true}
        mainColor="#123456"
        offlineColor="#EBEBEB"
        shouldHideAvatarOnlineMarker={false}
      />
      <div
        className="details"
        style={
          Object {
            "color": "#FFFFFF",
          }
        }
      >
        <div
          className="appName"
        >
          My little chat integration
        </div>
        <div
          className="introductionText"
        >
          intro
        </div>
      </div>
    </div>
    <RequiredEmailCapture
      conversationColor="#456789"
      language="en-US"
      name="My little chat integration"
    />
    <PoweredByGorgias
      translatedTexts={
        Object {
          "actionPostbackError": "An error occurred while processing your action. Please try again.",
          "backLabelBackAt": "Back online at {time}",
          "backLabelBackInAMinute": "Back in 1 minute",
          "backLabelBackInAnHour": "Back in 1 hour",
          "backLabelBackInDays": "Back in {value} days",
          "backLabelBackInHours": "Back in {value} hours",
          "backLabelBackInMinutes": "Back in {value} minutes",
          "backLabelBackTomorrow": "Back tomorrow",
          "campaignClickToReply": "Click to reply",
          "clickToRetry": "Message not delivered. Click to retry.",
          "conversationTimestampHeaderFormat": "MMMM D",
          "emailCaptureInputLabel": "Get notified by email",
          "emailCaptureOfflineThanksText": "Thanks {email}! We'll get back to you shortly.",
          "emailCaptureOfflineTriggerText": "We're away, leave us your email and we'll respond shortly.",
          "emailCaptureOnlineThanksText": "Thanks! We'll email you at {email} if you leave.",
          "emailCaptureOnlineTriggerText": "Leave us your email and we will reply soon.",
          "emailCapturePlaceholder": "your@email.com",
          "emailCaptureRequiredEmailPlaceholder": "Leave your email",
          "emailCaptureRequiredMessagePlaceholder": "Write your message",
          "fetchHistory": "Load more",
          "fetchingHistory": "Retrieving history...",
          "headerText": "Gorgias Team",
          "inputPlaceholder": "Type a message...",
          "introductionText": "How can we help?",
          "invalidFileError": "Only images are supported. Choose a file with a supported extension (jpg, jpeg, png, gif, or bmp).",
          "messageDelivered": "Delivered",
          "messageError": "An error occurred while sending your message. Please try again.",
          "messageIndicatorTitlePlural": "({count}) New messages",
          "messageIndicatorTitleSingular": "({count}) New message",
          "messageRelativeTimeDay": "{value}d ago",
          "messageRelativeTimeHour": "{value}h ago",
          "messageRelativeTimeJustNow": "Just now",
          "messageRelativeTimeMinute": "{value}m ago",
          "messageSending": "Sending...",
          "messageTimestampFormat": "h:mm A",
          "offlineIntroductionText": "We'll be back tomorrow",
          "poweredBy": "Powered by",
          "poweredByGorgias": "Powered by Gorgias",
          "requiredEmailCaptureWelcomeMessage": "Hi, hope you're doing well! Leave us your email so we can get back to you.",
          "send": "Send",
          "tapToRetry": "Message not delivered. Tap to retry.",
          "unsupportedActionType": "Unsupported action type.",
          "unsupportedMessageType": "Unsupported message type.",
          "usualReplyTimeDay": "Typically replies within a day",
          "usualReplyTimeHours": "Typically replies in a few hours",
          "usualReplyTimeMinutes": "Typically replies in a few minutes",
          "waitTimeMediumReply": "Thanks for reaching out! An agent will get back to you in about {waitTime} minutes.",
        }
      }
    />
  </div>
  <div
    className="button bottom-right"
    style={
      Object {
        "backgroundColor": "#123456",
      }
    }
  >
    <div
      className="iconWrapper"
    >
      <i
        className="icon"
      />
      <div
        className="shadow"
      />
    </div>
  </div>
</div>
`;

exports[`<ChatIntegrationPreview/> render() should display the avatar team picture in the header because the URL is set and the option is enabled 1`] = `
<div
  className="preview"
  style={Object {}}
>
  <div
    className="dialog"
  >
    <div
      className="header"
      style={
        Object {
          "backgroundColor": "#123456",
        }
      }
    >
      <ChatIntegrationAvatar
        avatarTeamPictureUrl="https://gorgias.io/avatar.png"
        avatarType="team-picture"
        isOnline={true}
        mainColor="#123456"
        offlineColor="#EBEBEB"
        shouldHideAvatarOnlineMarker={false}
      />
      <div
        className="details"
        style={
          Object {
            "color": "#FFFFFF",
          }
        }
      >
        <div
          className="appName"
        >
          My little chat integration
        </div>
        <div
          className="introductionText"
        >
          intro
        </div>
      </div>
    </div>
    <MessageContent
      agentMessages={
        Array [
          Object {
            "attachments": Array [],
            "content": "test",
            "isHtml": false,
          },
        ]
      }
      conversationColor="#456789"
      currentUser={
        Immutable.Map {
          "name": "Charles",
        }
      }
      customerInitialMessages={Array []}
    />
    <PoweredByGorgias
      translatedTexts={
        Object {
          "actionPostbackError": "An error occurred while processing your action. Please try again.",
          "backLabelBackAt": "Back online at {time}",
          "backLabelBackInAMinute": "Back in 1 minute",
          "backLabelBackInAnHour": "Back in 1 hour",
          "backLabelBackInDays": "Back in {value} days",
          "backLabelBackInHours": "Back in {value} hours",
          "backLabelBackInMinutes": "Back in {value} minutes",
          "backLabelBackTomorrow": "Back tomorrow",
          "campaignClickToReply": "Click to reply",
          "clickToRetry": "Message not delivered. Click to retry.",
          "conversationTimestampHeaderFormat": "MMMM D",
          "emailCaptureInputLabel": "Get notified by email",
          "emailCaptureOfflineThanksText": "Thanks {email}! We'll get back to you shortly.",
          "emailCaptureOfflineTriggerText": "We're away, leave us your email and we'll respond shortly.",
          "emailCaptureOnlineThanksText": "Thanks! We'll email you at {email} if you leave.",
          "emailCaptureOnlineTriggerText": "Leave us your email and we will reply soon.",
          "emailCapturePlaceholder": "your@email.com",
          "emailCaptureRequiredEmailPlaceholder": "Leave your email",
          "emailCaptureRequiredMessagePlaceholder": "Write your message",
          "fetchHistory": "Load more",
          "fetchingHistory": "Retrieving history...",
          "headerText": "Gorgias Team",
          "inputPlaceholder": "Type a message...",
          "introductionText": "How can we help?",
          "invalidFileError": "Only images are supported. Choose a file with a supported extension (jpg, jpeg, png, gif, or bmp).",
          "messageDelivered": "Delivered",
          "messageError": "An error occurred while sending your message. Please try again.",
          "messageIndicatorTitlePlural": "({count}) New messages",
          "messageIndicatorTitleSingular": "({count}) New message",
          "messageRelativeTimeDay": "{value}d ago",
          "messageRelativeTimeHour": "{value}h ago",
          "messageRelativeTimeJustNow": "Just now",
          "messageRelativeTimeMinute": "{value}m ago",
          "messageSending": "Sending...",
          "messageTimestampFormat": "h:mm A",
          "offlineIntroductionText": "We'll be back tomorrow",
          "poweredBy": "Powered by",
          "poweredByGorgias": "Powered by Gorgias",
          "requiredEmailCaptureWelcomeMessage": "Hi, hope you're doing well! Leave us your email so we can get back to you.",
          "send": "Send",
          "tapToRetry": "Message not delivered. Tap to retry.",
          "unsupportedActionType": "Unsupported action type.",
          "unsupportedMessageType": "Unsupported message type.",
          "usualReplyTimeDay": "Typically replies within a day",
          "usualReplyTimeHours": "Typically replies in a few hours",
          "usualReplyTimeMinutes": "Typically replies in a few minutes",
          "waitTimeMediumReply": "Thanks for reaching out! An agent will get back to you in about {waitTime} minutes.",
        }
      }
    />
    <div
      className="footer"
    >
      <div
        className="placeholder"
      >
        Type a message...
      </div>
      <i
        className="icon camera"
      />
    </div>
  </div>
  <div
    className="button bottom-right"
    style={
      Object {
        "backgroundColor": "#123456",
      }
    }
  >
    <div
      className="iconWrapper"
    >
      <i
        className="icon"
      />
      <div
        className="shadow"
      />
    </div>
  </div>
</div>
`;

exports[`<ChatIntegrationPreview/> render() should display the offline status because chat is offline 1`] = `
<div
  className="preview"
  style={Object {}}
>
  <div
    className="dialog"
  >
    <div
      className="header"
      style={
        Object {
          "backgroundColor": "#EBEBEB",
        }
      }
    >
      <ChatIntegrationAvatar
        isOnline={false}
        mainColor="#123456"
        offlineColor="#EBEBEB"
        shouldHideAvatarOnlineMarker={false}
      />
      <div
        className="details"
        style={
          Object {
            "color": "#161616",
          }
        }
      >
        <div
          className="appName"
        >
          My little chat integration
        </div>
        <div
          className="introductionText"
        >
           
        </div>
        <div
          className="replyTime"
        >
          <i
            className="material-icons md-2"
            style={
              Object {
                "color": "#161616",
              }
            }
          >
            schedule
          </i>
          Back online at 9:00 AM
        </div>
      </div>
    </div>
    <MessageContent
      agentMessages={
        Array [
          Object {
            "attachments": Array [],
            "content": "test",
            "isHtml": false,
          },
        ]
      }
      conversationColor="#456789"
      currentUser={
        Immutable.Map {
          "name": "Charles",
        }
      }
      customerInitialMessages={Array []}
    />
    <PoweredByGorgias
      translatedTexts={
        Object {
          "actionPostbackError": "An error occurred while processing your action. Please try again.",
          "backLabelBackAt": "Back online at {time}",
          "backLabelBackInAMinute": "Back in 1 minute",
          "backLabelBackInAnHour": "Back in 1 hour",
          "backLabelBackInDays": "Back in {value} days",
          "backLabelBackInHours": "Back in {value} hours",
          "backLabelBackInMinutes": "Back in {value} minutes",
          "backLabelBackTomorrow": "Back tomorrow",
          "campaignClickToReply": "Click to reply",
          "clickToRetry": "Message not delivered. Click to retry.",
          "conversationTimestampHeaderFormat": "MMMM D",
          "emailCaptureInputLabel": "Get notified by email",
          "emailCaptureOfflineThanksText": "Thanks {email}! We'll get back to you shortly.",
          "emailCaptureOfflineTriggerText": "We're away, leave us your email and we'll respond shortly.",
          "emailCaptureOnlineThanksText": "Thanks! We'll email you at {email} if you leave.",
          "emailCaptureOnlineTriggerText": "Leave us your email and we will reply soon.",
          "emailCapturePlaceholder": "your@email.com",
          "emailCaptureRequiredEmailPlaceholder": "Leave your email",
          "emailCaptureRequiredMessagePlaceholder": "Write your message",
          "fetchHistory": "Load more",
          "fetchingHistory": "Retrieving history...",
          "headerText": "Gorgias Team",
          "inputPlaceholder": "Type a message...",
          "introductionText": "How can we help?",
          "invalidFileError": "Only images are supported. Choose a file with a supported extension (jpg, jpeg, png, gif, or bmp).",
          "messageDelivered": "Delivered",
          "messageError": "An error occurred while sending your message. Please try again.",
          "messageIndicatorTitlePlural": "({count}) New messages",
          "messageIndicatorTitleSingular": "({count}) New message",
          "messageRelativeTimeDay": "{value}d ago",
          "messageRelativeTimeHour": "{value}h ago",
          "messageRelativeTimeJustNow": "Just now",
          "messageRelativeTimeMinute": "{value}m ago",
          "messageSending": "Sending...",
          "messageTimestampFormat": "h:mm A",
          "offlineIntroductionText": "We'll be back tomorrow",
          "poweredBy": "Powered by",
          "poweredByGorgias": "Powered by Gorgias",
          "requiredEmailCaptureWelcomeMessage": "Hi, hope you're doing well! Leave us your email so we can get back to you.",
          "send": "Send",
          "tapToRetry": "Message not delivered. Tap to retry.",
          "unsupportedActionType": "Unsupported action type.",
          "unsupportedMessageType": "Unsupported message type.",
          "usualReplyTimeDay": "Typically replies within a day",
          "usualReplyTimeHours": "Typically replies in a few hours",
          "usualReplyTimeMinutes": "Typically replies in a few minutes",
          "waitTimeMediumReply": "Thanks for reaching out! An agent will get back to you in about {waitTime} minutes.",
        }
      }
    />
    <div
      className="footer"
    >
      <div
        className="placeholder"
      >
        Type a message...
      </div>
      <i
        className="icon camera"
      />
    </div>
  </div>
  <div
    className="button bottom-right"
    style={
      Object {
        "backgroundColor": "#EBEBEB",
      }
    }
  >
    <div
      className="iconWrapper"
    >
      <i
        className="iconDark"
      />
      <div
        className="shadow"
      />
    </div>
  </div>
</div>
`;

exports[`<ChatIntegrationPreview/> render() should display the online status because chat is online 1`] = `
<div
  className="preview"
  style={Object {}}
>
  <div
    className="dialog"
  >
    <div
      className="header"
      style={
        Object {
          "backgroundColor": "#123456",
        }
      }
    >
      <ChatIntegrationAvatar
        isOnline={true}
        mainColor="#123456"
        offlineColor="#EBEBEB"
        shouldHideAvatarOnlineMarker={false}
      />
      <div
        className="details"
        style={
          Object {
            "color": "#FFFFFF",
          }
        }
      >
        <div
          className="appName"
        >
          My little chat integration
        </div>
        <div
          className="introductionText"
        >
          intro
        </div>
      </div>
    </div>
    <MessageContent
      agentMessages={
        Array [
          Object {
            "attachments": Array [],
            "content": "test",
            "isHtml": false,
          },
        ]
      }
      conversationColor="#456789"
      currentUser={
        Immutable.Map {
          "name": "Charles",
        }
      }
      customerInitialMessages={Array []}
    />
    <PoweredByGorgias
      translatedTexts={
        Object {
          "actionPostbackError": "An error occurred while processing your action. Please try again.",
          "backLabelBackAt": "Back online at {time}",
          "backLabelBackInAMinute": "Back in 1 minute",
          "backLabelBackInAnHour": "Back in 1 hour",
          "backLabelBackInDays": "Back in {value} days",
          "backLabelBackInHours": "Back in {value} hours",
          "backLabelBackInMinutes": "Back in {value} minutes",
          "backLabelBackTomorrow": "Back tomorrow",
          "campaignClickToReply": "Click to reply",
          "clickToRetry": "Message not delivered. Click to retry.",
          "conversationTimestampHeaderFormat": "MMMM D",
          "emailCaptureInputLabel": "Get notified by email",
          "emailCaptureOfflineThanksText": "Thanks {email}! We'll get back to you shortly.",
          "emailCaptureOfflineTriggerText": "We're away, leave us your email and we'll respond shortly.",
          "emailCaptureOnlineThanksText": "Thanks! We'll email you at {email} if you leave.",
          "emailCaptureOnlineTriggerText": "Leave us your email and we will reply soon.",
          "emailCapturePlaceholder": "your@email.com",
          "emailCaptureRequiredEmailPlaceholder": "Leave your email",
          "emailCaptureRequiredMessagePlaceholder": "Write your message",
          "fetchHistory": "Load more",
          "fetchingHistory": "Retrieving history...",
          "headerText": "Gorgias Team",
          "inputPlaceholder": "Type a message...",
          "introductionText": "How can we help?",
          "invalidFileError": "Only images are supported. Choose a file with a supported extension (jpg, jpeg, png, gif, or bmp).",
          "messageDelivered": "Delivered",
          "messageError": "An error occurred while sending your message. Please try again.",
          "messageIndicatorTitlePlural": "({count}) New messages",
          "messageIndicatorTitleSingular": "({count}) New message",
          "messageRelativeTimeDay": "{value}d ago",
          "messageRelativeTimeHour": "{value}h ago",
          "messageRelativeTimeJustNow": "Just now",
          "messageRelativeTimeMinute": "{value}m ago",
          "messageSending": "Sending...",
          "messageTimestampFormat": "h:mm A",
          "offlineIntroductionText": "We'll be back tomorrow",
          "poweredBy": "Powered by",
          "poweredByGorgias": "Powered by Gorgias",
          "requiredEmailCaptureWelcomeMessage": "Hi, hope you're doing well! Leave us your email so we can get back to you.",
          "send": "Send",
          "tapToRetry": "Message not delivered. Tap to retry.",
          "unsupportedActionType": "Unsupported action type.",
          "unsupportedMessageType": "Unsupported message type.",
          "usualReplyTimeDay": "Typically replies within a day",
          "usualReplyTimeHours": "Typically replies in a few hours",
          "usualReplyTimeMinutes": "Typically replies in a few minutes",
          "waitTimeMediumReply": "Thanks for reaching out! An agent will get back to you in about {waitTime} minutes.",
        }
      }
    />
    <div
      className="footer"
    >
      <div
        className="placeholder"
      >
        Type a message...
      </div>
      <i
        className="icon camera"
      />
    </div>
  </div>
  <div
    className="button bottom-right"
    style={
      Object {
        "backgroundColor": "#123456",
      }
    }
  >
    <div
      className="iconWrapper"
    >
      <i
        className="icon"
      />
      <div
        className="shadow"
      />
    </div>
  </div>
</div>
`;

exports[`<ChatIntegrationPreview/> render() should display the sliders when editing the position 1`] = `
<div
  className="preview"
  style={Object {}}
>
  <div
    className="dialog"
  >
    <div
      className="header"
      style={
        Object {
          "backgroundColor": "#123456",
        }
      }
    >
      <ChatIntegrationAvatar
        isOnline={true}
        mainColor="#123456"
        offlineColor="#EBEBEB"
        shouldHideAvatarOnlineMarker={false}
      />
      <div
        className="details"
        style={
          Object {
            "color": "#FFFFFF",
          }
        }
      >
        <div
          className="appName"
        >
          My little chat integration
        </div>
        <div
          className="introductionText"
        >
          intro
        </div>
      </div>
    </div>
    <MessageContent
      agentMessages={
        Array [
          Object {
            "attachments": Array [],
            "content": "test",
            "isHtml": false,
          },
        ]
      }
      conversationColor="#456789"
      currentUser={
        Immutable.Map {
          "name": "Charles",
        }
      }
      customerInitialMessages={Array []}
    />
    <PoweredByGorgias
      translatedTexts={
        Object {
          "actionPostbackError": "An error occurred while processing your action. Please try again.",
          "backLabelBackAt": "Back online at {time}",
          "backLabelBackInAMinute": "Back in 1 minute",
          "backLabelBackInAnHour": "Back in 1 hour",
          "backLabelBackInDays": "Back in {value} days",
          "backLabelBackInHours": "Back in {value} hours",
          "backLabelBackInMinutes": "Back in {value} minutes",
          "backLabelBackTomorrow": "Back tomorrow",
          "campaignClickToReply": "Click to reply",
          "clickToRetry": "Message not delivered. Click to retry.",
          "conversationTimestampHeaderFormat": "MMMM D",
          "emailCaptureInputLabel": "Get notified by email",
          "emailCaptureOfflineThanksText": "Thanks {email}! We'll get back to you shortly.",
          "emailCaptureOfflineTriggerText": "We're away, leave us your email and we'll respond shortly.",
          "emailCaptureOnlineThanksText": "Thanks! We'll email you at {email} if you leave.",
          "emailCaptureOnlineTriggerText": "Leave us your email and we will reply soon.",
          "emailCapturePlaceholder": "your@email.com",
          "emailCaptureRequiredEmailPlaceholder": "Leave your email",
          "emailCaptureRequiredMessagePlaceholder": "Write your message",
          "fetchHistory": "Load more",
          "fetchingHistory": "Retrieving history...",
          "headerText": "Gorgias Team",
          "inputPlaceholder": "Type a message...",
          "introductionText": "How can we help?",
          "invalidFileError": "Only images are supported. Choose a file with a supported extension (jpg, jpeg, png, gif, or bmp).",
          "messageDelivered": "Delivered",
          "messageError": "An error occurred while sending your message. Please try again.",
          "messageIndicatorTitlePlural": "({count}) New messages",
          "messageIndicatorTitleSingular": "({count}) New message",
          "messageRelativeTimeDay": "{value}d ago",
          "messageRelativeTimeHour": "{value}h ago",
          "messageRelativeTimeJustNow": "Just now",
          "messageRelativeTimeMinute": "{value}m ago",
          "messageSending": "Sending...",
          "messageTimestampFormat": "h:mm A",
          "offlineIntroductionText": "We'll be back tomorrow",
          "poweredBy": "Powered by",
          "poweredByGorgias": "Powered by Gorgias",
          "requiredEmailCaptureWelcomeMessage": "Hi, hope you're doing well! Leave us your email so we can get back to you.",
          "send": "Send",
          "tapToRetry": "Message not delivered. Tap to retry.",
          "unsupportedActionType": "Unsupported action type.",
          "unsupportedMessageType": "Unsupported message type.",
          "usualReplyTimeDay": "Typically replies within a day",
          "usualReplyTimeHours": "Typically replies in a few hours",
          "usualReplyTimeMinutes": "Typically replies in a few minutes",
          "waitTimeMediumReply": "Thanks for reaching out! An agent will get back to you in about {waitTime} minutes.",
        }
      }
    />
    <div
      className="footer"
    >
      <div
        className="placeholder"
      >
        Type a message...
      </div>
      <i
        className="icon camera"
      />
    </div>
  </div>
  <div
    className="button bottom-right"
    style={
      Object {
        "backgroundColor": "#123456",
      }
    }
  >
    <div
      className="iconWrapper"
    >
      <i
        className="icon"
      />
      <div
        className="shadow"
      />
    </div>
  </div>
</div>
`;

exports[`<ChatIntegrationPreview/> render() should display typical response time for reply-in-day 1`] = `
<div
  className="preview"
  style={Object {}}
>
  <div
    className="dialog"
  >
    <div
      className="header"
      style={
        Object {
          "backgroundColor": "#123456",
        }
      }
    >
      <ChatIntegrationAvatar
        isOnline={true}
        mainColor="#123456"
        offlineColor="#EBEBEB"
        shouldHideAvatarOnlineMarker={false}
      />
      <div
        className="details"
        style={
          Object {
            "color": "#FFFFFF",
          }
        }
      >
        <div
          className="appName"
        >
          My little chat integration
        </div>
        <div
          className="introductionText"
        >
          intro
        </div>
        <div
          className="replyTime"
        >
          <i
            className="material-icons md-2"
            style={
              Object {
                "color": "#FFFFFF",
              }
            }
          >
            schedule
          </i>
          Typically replies within a day
        </div>
      </div>
    </div>
    <MessageContent
      agentMessages={
        Array [
          Object {
            "attachments": Array [],
            "content": "test",
            "isHtml": false,
          },
        ]
      }
      conversationColor="#456789"
      currentUser={
        Immutable.Map {
          "name": "Charles",
        }
      }
      customerInitialMessages={Array []}
    />
    <PoweredByGorgias
      translatedTexts={
        Object {
          "actionPostbackError": "An error occurred while processing your action. Please try again.",
          "backLabelBackAt": "Back online at {time}",
          "backLabelBackInAMinute": "Back in 1 minute",
          "backLabelBackInAnHour": "Back in 1 hour",
          "backLabelBackInDays": "Back in {value} days",
          "backLabelBackInHours": "Back in {value} hours",
          "backLabelBackInMinutes": "Back in {value} minutes",
          "backLabelBackTomorrow": "Back tomorrow",
          "campaignClickToReply": "Click to reply",
          "clickToRetry": "Message not delivered. Click to retry.",
          "conversationTimestampHeaderFormat": "MMMM D",
          "emailCaptureInputLabel": "Get notified by email",
          "emailCaptureOfflineThanksText": "Thanks {email}! We'll get back to you shortly.",
          "emailCaptureOfflineTriggerText": "We're away, leave us your email and we'll respond shortly.",
          "emailCaptureOnlineThanksText": "Thanks! We'll email you at {email} if you leave.",
          "emailCaptureOnlineTriggerText": "Leave us your email and we will reply soon.",
          "emailCapturePlaceholder": "your@email.com",
          "emailCaptureRequiredEmailPlaceholder": "Leave your email",
          "emailCaptureRequiredMessagePlaceholder": "Write your message",
          "fetchHistory": "Load more",
          "fetchingHistory": "Retrieving history...",
          "headerText": "Gorgias Team",
          "inputPlaceholder": "Type a message...",
          "introductionText": "How can we help?",
          "invalidFileError": "Only images are supported. Choose a file with a supported extension (jpg, jpeg, png, gif, or bmp).",
          "messageDelivered": "Delivered",
          "messageError": "An error occurred while sending your message. Please try again.",
          "messageIndicatorTitlePlural": "({count}) New messages",
          "messageIndicatorTitleSingular": "({count}) New message",
          "messageRelativeTimeDay": "{value}d ago",
          "messageRelativeTimeHour": "{value}h ago",
          "messageRelativeTimeJustNow": "Just now",
          "messageRelativeTimeMinute": "{value}m ago",
          "messageSending": "Sending...",
          "messageTimestampFormat": "h:mm A",
          "offlineIntroductionText": "We'll be back tomorrow",
          "poweredBy": "Powered by",
          "poweredByGorgias": "Powered by Gorgias",
          "requiredEmailCaptureWelcomeMessage": "Hi, hope you're doing well! Leave us your email so we can get back to you.",
          "send": "Send",
          "tapToRetry": "Message not delivered. Tap to retry.",
          "unsupportedActionType": "Unsupported action type.",
          "unsupportedMessageType": "Unsupported message type.",
          "usualReplyTimeDay": "Typically replies within a day",
          "usualReplyTimeHours": "Typically replies in a few hours",
          "usualReplyTimeMinutes": "Typically replies in a few minutes",
          "waitTimeMediumReply": "Thanks for reaching out! An agent will get back to you in about {waitTime} minutes.",
        }
      }
    />
  </div>
  <div
    className="button bottom-right"
    style={
      Object {
        "backgroundColor": "#123456",
      }
    }
  >
    <div
      className="iconWrapper"
    >
      <i
        className="icon"
      />
      <div
        className="shadow"
      />
    </div>
    <div
      className="axis-y"
    >
      <div
        className="offsetLine"
      />
      <div
        className="offsetContent"
      >
        0px
      </div>
    </div>
  </div>
</div>
`;

exports[`<ChatIntegrationPreview/> render() should display typical response time for reply-in-hours 1`] = `
<div
  className="preview"
  style={Object {}}
>
  <div
    className="dialog"
  >
    <div
      className="header"
      style={
        Object {
          "backgroundColor": "#123456",
        }
      }
    >
      <ChatIntegrationAvatar
        isOnline={true}
        mainColor="#123456"
        offlineColor="#EBEBEB"
        shouldHideAvatarOnlineMarker={false}
      />
      <div
        className="details"
        style={
          Object {
            "color": "#FFFFFF",
          }
        }
      >
        <div
          className="appName"
        >
          My little chat integration
        </div>
        <div
          className="introductionText"
        >
          intro
        </div>
        <div
          className="replyTime"
        >
          <i
            className="material-icons md-2"
            style={
              Object {
                "color": "#FFFFFF",
              }
            }
          >
            schedule
          </i>
          Typically replies in a few hours
        </div>
      </div>
    </div>
    <MessageContent
      agentMessages={
        Array [
          Object {
            "attachments": Array [],
            "content": "test",
            "isHtml": false,
          },
        ]
      }
      conversationColor="#456789"
      currentUser={
        Immutable.Map {
          "name": "Charles",
        }
      }
      customerInitialMessages={Array []}
    />
    <PoweredByGorgias
      translatedTexts={
        Object {
          "actionPostbackError": "An error occurred while processing your action. Please try again.",
          "backLabelBackAt": "Back online at {time}",
          "backLabelBackInAMinute": "Back in 1 minute",
          "backLabelBackInAnHour": "Back in 1 hour",
          "backLabelBackInDays": "Back in {value} days",
          "backLabelBackInHours": "Back in {value} hours",
          "backLabelBackInMinutes": "Back in {value} minutes",
          "backLabelBackTomorrow": "Back tomorrow",
          "campaignClickToReply": "Click to reply",
          "clickToRetry": "Message not delivered. Click to retry.",
          "conversationTimestampHeaderFormat": "MMMM D",
          "emailCaptureInputLabel": "Get notified by email",
          "emailCaptureOfflineThanksText": "Thanks {email}! We'll get back to you shortly.",
          "emailCaptureOfflineTriggerText": "We're away, leave us your email and we'll respond shortly.",
          "emailCaptureOnlineThanksText": "Thanks! We'll email you at {email} if you leave.",
          "emailCaptureOnlineTriggerText": "Leave us your email and we will reply soon.",
          "emailCapturePlaceholder": "your@email.com",
          "emailCaptureRequiredEmailPlaceholder": "Leave your email",
          "emailCaptureRequiredMessagePlaceholder": "Write your message",
          "fetchHistory": "Load more",
          "fetchingHistory": "Retrieving history...",
          "headerText": "Gorgias Team",
          "inputPlaceholder": "Type a message...",
          "introductionText": "How can we help?",
          "invalidFileError": "Only images are supported. Choose a file with a supported extension (jpg, jpeg, png, gif, or bmp).",
          "messageDelivered": "Delivered",
          "messageError": "An error occurred while sending your message. Please try again.",
          "messageIndicatorTitlePlural": "({count}) New messages",
          "messageIndicatorTitleSingular": "({count}) New message",
          "messageRelativeTimeDay": "{value}d ago",
          "messageRelativeTimeHour": "{value}h ago",
          "messageRelativeTimeJustNow": "Just now",
          "messageRelativeTimeMinute": "{value}m ago",
          "messageSending": "Sending...",
          "messageTimestampFormat": "h:mm A",
          "offlineIntroductionText": "We'll be back tomorrow",
          "poweredBy": "Powered by",
          "poweredByGorgias": "Powered by Gorgias",
          "requiredEmailCaptureWelcomeMessage": "Hi, hope you're doing well! Leave us your email so we can get back to you.",
          "send": "Send",
          "tapToRetry": "Message not delivered. Tap to retry.",
          "unsupportedActionType": "Unsupported action type.",
          "unsupportedMessageType": "Unsupported message type.",
          "usualReplyTimeDay": "Typically replies within a day",
          "usualReplyTimeHours": "Typically replies in a few hours",
          "usualReplyTimeMinutes": "Typically replies in a few minutes",
          "waitTimeMediumReply": "Thanks for reaching out! An agent will get back to you in about {waitTime} minutes.",
        }
      }
    />
  </div>
  <div
    className="button bottom-right"
    style={
      Object {
        "backgroundColor": "#123456",
      }
    }
  >
    <div
      className="iconWrapper"
    >
      <i
        className="icon"
      />
      <div
        className="shadow"
      />
    </div>
    <div
      className="axis-y"
    >
      <div
        className="offsetLine"
      />
      <div
        className="offsetContent"
      >
        0px
      </div>
    </div>
  </div>
</div>
`;

exports[`<ChatIntegrationPreview/> render() should display typical response time for reply-in-minutes 1`] = `
<div
  className="preview"
  style={Object {}}
>
  <div
    className="dialog"
  >
    <div
      className="header"
      style={
        Object {
          "backgroundColor": "#123456",
        }
      }
    >
      <ChatIntegrationAvatar
        isOnline={true}
        mainColor="#123456"
        offlineColor="#EBEBEB"
        shouldHideAvatarOnlineMarker={false}
      />
      <div
        className="details"
        style={
          Object {
            "color": "#FFFFFF",
          }
        }
      >
        <div
          className="appName"
        >
          My little chat integration
        </div>
        <div
          className="introductionText"
        >
          intro
        </div>
        <div
          className="replyTime"
        >
          <i
            className="material-icons md-2"
            style={
              Object {
                "color": "#FFFFFF",
              }
            }
          >
            schedule
          </i>
          Typically replies in a few minutes
        </div>
      </div>
    </div>
    <MessageContent
      agentMessages={
        Array [
          Object {
            "attachments": Array [],
            "content": "test",
            "isHtml": false,
          },
        ]
      }
      conversationColor="#456789"
      currentUser={
        Immutable.Map {
          "name": "Charles",
        }
      }
      customerInitialMessages={Array []}
    />
    <PoweredByGorgias
      translatedTexts={
        Object {
          "actionPostbackError": "An error occurred while processing your action. Please try again.",
          "backLabelBackAt": "Back online at {time}",
          "backLabelBackInAMinute": "Back in 1 minute",
          "backLabelBackInAnHour": "Back in 1 hour",
          "backLabelBackInDays": "Back in {value} days",
          "backLabelBackInHours": "Back in {value} hours",
          "backLabelBackInMinutes": "Back in {value} minutes",
          "backLabelBackTomorrow": "Back tomorrow",
          "campaignClickToReply": "Click to reply",
          "clickToRetry": "Message not delivered. Click to retry.",
          "conversationTimestampHeaderFormat": "MMMM D",
          "emailCaptureInputLabel": "Get notified by email",
          "emailCaptureOfflineThanksText": "Thanks {email}! We'll get back to you shortly.",
          "emailCaptureOfflineTriggerText": "We're away, leave us your email and we'll respond shortly.",
          "emailCaptureOnlineThanksText": "Thanks! We'll email you at {email} if you leave.",
          "emailCaptureOnlineTriggerText": "Leave us your email and we will reply soon.",
          "emailCapturePlaceholder": "your@email.com",
          "emailCaptureRequiredEmailPlaceholder": "Leave your email",
          "emailCaptureRequiredMessagePlaceholder": "Write your message",
          "fetchHistory": "Load more",
          "fetchingHistory": "Retrieving history...",
          "headerText": "Gorgias Team",
          "inputPlaceholder": "Type a message...",
          "introductionText": "How can we help?",
          "invalidFileError": "Only images are supported. Choose a file with a supported extension (jpg, jpeg, png, gif, or bmp).",
          "messageDelivered": "Delivered",
          "messageError": "An error occurred while sending your message. Please try again.",
          "messageIndicatorTitlePlural": "({count}) New messages",
          "messageIndicatorTitleSingular": "({count}) New message",
          "messageRelativeTimeDay": "{value}d ago",
          "messageRelativeTimeHour": "{value}h ago",
          "messageRelativeTimeJustNow": "Just now",
          "messageRelativeTimeMinute": "{value}m ago",
          "messageSending": "Sending...",
          "messageTimestampFormat": "h:mm A",
          "offlineIntroductionText": "We'll be back tomorrow",
          "poweredBy": "Powered by",
          "poweredByGorgias": "Powered by Gorgias",
          "requiredEmailCaptureWelcomeMessage": "Hi, hope you're doing well! Leave us your email so we can get back to you.",
          "send": "Send",
          "tapToRetry": "Message not delivered. Tap to retry.",
          "unsupportedActionType": "Unsupported action type.",
          "unsupportedMessageType": "Unsupported message type.",
          "usualReplyTimeDay": "Typically replies within a day",
          "usualReplyTimeHours": "Typically replies in a few hours",
          "usualReplyTimeMinutes": "Typically replies in a few minutes",
          "waitTimeMediumReply": "Thanks for reaching out! An agent will get back to you in about {waitTime} minutes.",
        }
      }
    />
  </div>
  <div
    className="button bottom-right"
    style={
      Object {
        "backgroundColor": "#123456",
      }
    }
  >
    <div
      className="iconWrapper"
    >
      <i
        className="icon"
      />
      <div
        className="shadow"
      />
    </div>
    <div
      className="axis-y"
    >
      <div
        className="offsetLine"
      />
      <div
        className="offsetContent"
      >
        0px
      </div>
    </div>
  </div>
</div>
`;

exports[`<ChatIntegrationPreview/> render() should display typical response time for reply-shortly 1`] = `
<div
  className="preview"
  style={Object {}}
>
  <div
    className="dialog"
  >
    <div
      className="header"
      style={
        Object {
          "backgroundColor": "#123456",
        }
      }
    >
      <ChatIntegrationAvatar
        isOnline={true}
        mainColor="#123456"
        offlineColor="#EBEBEB"
        shouldHideAvatarOnlineMarker={false}
      />
      <div
        className="details"
        style={
          Object {
            "color": "#FFFFFF",
          }
        }
      >
        <div
          className="appName"
        >
          My little chat integration
        </div>
        <div
          className="introductionText"
        >
          intro
        </div>
        <div
          className="replyTime"
        >
          <i
            className="material-icons md-2"
            style={
              Object {
                "color": "#FFFFFF",
              }
            }
          >
            schedule
          </i>
          Typically replies in a few minutes
        </div>
      </div>
    </div>
    <MessageContent
      agentMessages={
        Array [
          Object {
            "attachments": Array [],
            "content": "test",
            "isHtml": false,
          },
        ]
      }
      conversationColor="#456789"
      currentUser={
        Immutable.Map {
          "name": "Charles",
        }
      }
      customerInitialMessages={Array []}
    />
    <PoweredByGorgias
      translatedTexts={
        Object {
          "actionPostbackError": "An error occurred while processing your action. Please try again.",
          "backLabelBackAt": "Back online at {time}",
          "backLabelBackInAMinute": "Back in 1 minute",
          "backLabelBackInAnHour": "Back in 1 hour",
          "backLabelBackInDays": "Back in {value} days",
          "backLabelBackInHours": "Back in {value} hours",
          "backLabelBackInMinutes": "Back in {value} minutes",
          "backLabelBackTomorrow": "Back tomorrow",
          "campaignClickToReply": "Click to reply",
          "clickToRetry": "Message not delivered. Click to retry.",
          "conversationTimestampHeaderFormat": "MMMM D",
          "emailCaptureInputLabel": "Get notified by email",
          "emailCaptureOfflineThanksText": "Thanks {email}! We'll get back to you shortly.",
          "emailCaptureOfflineTriggerText": "We're away, leave us your email and we'll respond shortly.",
          "emailCaptureOnlineThanksText": "Thanks! We'll email you at {email} if you leave.",
          "emailCaptureOnlineTriggerText": "Leave us your email and we will reply soon.",
          "emailCapturePlaceholder": "your@email.com",
          "emailCaptureRequiredEmailPlaceholder": "Leave your email",
          "emailCaptureRequiredMessagePlaceholder": "Write your message",
          "fetchHistory": "Load more",
          "fetchingHistory": "Retrieving history...",
          "headerText": "Gorgias Team",
          "inputPlaceholder": "Type a message...",
          "introductionText": "How can we help?",
          "invalidFileError": "Only images are supported. Choose a file with a supported extension (jpg, jpeg, png, gif, or bmp).",
          "messageDelivered": "Delivered",
          "messageError": "An error occurred while sending your message. Please try again.",
          "messageIndicatorTitlePlural": "({count}) New messages",
          "messageIndicatorTitleSingular": "({count}) New message",
          "messageRelativeTimeDay": "{value}d ago",
          "messageRelativeTimeHour": "{value}h ago",
          "messageRelativeTimeJustNow": "Just now",
          "messageRelativeTimeMinute": "{value}m ago",
          "messageSending": "Sending...",
          "messageTimestampFormat": "h:mm A",
          "offlineIntroductionText": "We'll be back tomorrow",
          "poweredBy": "Powered by",
          "poweredByGorgias": "Powered by Gorgias",
          "requiredEmailCaptureWelcomeMessage": "Hi, hope you're doing well! Leave us your email so we can get back to you.",
          "send": "Send",
          "tapToRetry": "Message not delivered. Tap to retry.",
          "unsupportedActionType": "Unsupported action type.",
          "unsupportedMessageType": "Unsupported message type.",
          "usualReplyTimeDay": "Typically replies within a day",
          "usualReplyTimeHours": "Typically replies in a few hours",
          "usualReplyTimeMinutes": "Typically replies in a few minutes",
          "waitTimeMediumReply": "Thanks for reaching out! An agent will get back to you in about {waitTime} minutes.",
        }
      }
    />
  </div>
  <div
    className="button bottom-right"
    style={
      Object {
        "backgroundColor": "#123456",
      }
    }
  >
    <div
      className="iconWrapper"
    >
      <i
        className="icon"
      />
      <div
        className="shadow"
      />
    </div>
    <div
      className="axis-y"
    >
      <div
        className="offsetLine"
      />
      <div
        className="offsetContent"
      >
        0px
      </div>
    </div>
  </div>
</div>
`;

exports[`<ChatIntegrationPreview/> render() should not display button if hideButton provided 1`] = `
<div
  className="preview"
  style={Object {}}
>
  <div
    className="dialog"
  >
    <div
      className="header"
      style={
        Object {
          "backgroundColor": "#123456",
        }
      }
    >
      <ChatIntegrationAvatar
        isOnline={true}
        mainColor="#123456"
        offlineColor="#EBEBEB"
        shouldHideAvatarOnlineMarker={false}
      />
      <div
        className="details"
        style={
          Object {
            "color": "#FFFFFF",
          }
        }
      >
        <div
          className="appName"
        >
          My little chat integration
        </div>
        <div
          className="introductionText"
        >
          intro
        </div>
      </div>
    </div>
    <MessageContent
      agentMessages={
        Array [
          Object {
            "attachments": Array [],
            "content": "test",
            "isHtml": false,
          },
        ]
      }
      conversationColor="#456789"
      currentUser={
        Immutable.Map {
          "name": "Charles",
        }
      }
      customerInitialMessages={Array []}
    />
    <PoweredByGorgias
      translatedTexts={
        Object {
          "actionPostbackError": "An error occurred while processing your action. Please try again.",
          "backLabelBackAt": "Back online at {time}",
          "backLabelBackInAMinute": "Back in 1 minute",
          "backLabelBackInAnHour": "Back in 1 hour",
          "backLabelBackInDays": "Back in {value} days",
          "backLabelBackInHours": "Back in {value} hours",
          "backLabelBackInMinutes": "Back in {value} minutes",
          "backLabelBackTomorrow": "Back tomorrow",
          "campaignClickToReply": "Click to reply",
          "clickToRetry": "Message not delivered. Click to retry.",
          "conversationTimestampHeaderFormat": "MMMM D",
          "emailCaptureInputLabel": "Get notified by email",
          "emailCaptureOfflineThanksText": "Thanks {email}! We'll get back to you shortly.",
          "emailCaptureOfflineTriggerText": "We're away, leave us your email and we'll respond shortly.",
          "emailCaptureOnlineThanksText": "Thanks! We'll email you at {email} if you leave.",
          "emailCaptureOnlineTriggerText": "Leave us your email and we will reply soon.",
          "emailCapturePlaceholder": "your@email.com",
          "emailCaptureRequiredEmailPlaceholder": "Leave your email",
          "emailCaptureRequiredMessagePlaceholder": "Write your message",
          "fetchHistory": "Load more",
          "fetchingHistory": "Retrieving history...",
          "headerText": "Gorgias Team",
          "inputPlaceholder": "Type a message...",
          "introductionText": "How can we help?",
          "invalidFileError": "Only images are supported. Choose a file with a supported extension (jpg, jpeg, png, gif, or bmp).",
          "messageDelivered": "Delivered",
          "messageError": "An error occurred while sending your message. Please try again.",
          "messageIndicatorTitlePlural": "({count}) New messages",
          "messageIndicatorTitleSingular": "({count}) New message",
          "messageRelativeTimeDay": "{value}d ago",
          "messageRelativeTimeHour": "{value}h ago",
          "messageRelativeTimeJustNow": "Just now",
          "messageRelativeTimeMinute": "{value}m ago",
          "messageSending": "Sending...",
          "messageTimestampFormat": "h:mm A",
          "offlineIntroductionText": "We'll be back tomorrow",
          "poweredBy": "Powered by",
          "poweredByGorgias": "Powered by Gorgias",
          "requiredEmailCaptureWelcomeMessage": "Hi, hope you're doing well! Leave us your email so we can get back to you.",
          "send": "Send",
          "tapToRetry": "Message not delivered. Tap to retry.",
          "unsupportedActionType": "Unsupported action type.",
          "unsupportedMessageType": "Unsupported message type.",
          "usualReplyTimeDay": "Typically replies within a day",
          "usualReplyTimeHours": "Typically replies in a few hours",
          "usualReplyTimeMinutes": "Typically replies in a few minutes",
          "waitTimeMediumReply": "Thanks for reaching out! An agent will get back to you in about {waitTime} minutes.",
        }
      }
    />
    <div
      className="footer"
    >
      <div
        className="placeholder"
      >
        Type a message...
      </div>
      <i
        className="icon camera"
      />
    </div>
  </div>
</div>
`;
